# tt-swiss

./: .gitignore  CLAUDE.md  README.md  TTMEM_AGENTS.md  __init__.py  analyzer.py  extract_last_run.py  mlir_parser.py  pyproject.toml  run_profiled.py
claude/: README.md
claude/commands/: clean-build-xla.md
claude/skills/document-perf-test/: SKILL.md
claude/skills/repro-failing-op/: SKILL.md
claude/skills/run-write-model-report/: SKILL.md
memory_profiler/: __init__.py  generate_viz.py  inputs_registry_parser.py  interactive_cli.py  ir_parser.py  memory_parser.py  mlir_parser.py  parser.py  run_profiled.py  text_formatter.py  visualizer.py
model_analysis/: CLAUDE.md  README.md  __init__.py  cli.py  ir_export_single_module.py  module_tree.py  shape_capture_subprocess.py  shapes.py  visualizer.py
ttchop/: ARCHITECTURE.md  CLAUDE.md  README.md  __init__.py  cli.py  data_types.py  error_patterns.py  ir_export_single_module.py  log_parser.py  module_extractor.py  module_runner.py  module_tree.py  op_by_op_runner.py  shape_capture_subprocess.py  shapes.py  summary.py  utils.py  visualizer.py
