# SPDX-FileCopyrightText: (c) 2025 Tenstorrent AI ULC
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tt-swiss"
version = "0.1.0"
description = "Swiss army knife tools for Tenstorrent hardware - memory profiler and ttchop"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0",
    "InquirerPy>=0.3.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
tt-memory-profiler = "memory_profiler.run_profiled:main"
ttmem = "memory_profiler.interactive_cli:main"
ttchop = "ttchop.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["memory_profiler*", "ttchop*"]
